--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -10,6 +10,7 @@ set-option -as terminal-overrides ',xterm*:RGB'
 
 # Windows should start at 1
 set -g base-index 1
+setw -g pane-base-index 1
 
 # change prefix
 unbind C-b
