--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,13 +15,15 @@ setw -g pane-base-index 1
 # change prefix
 unbind C-b
 set-option -g prefix M-o
+
 bind-key M-o send-prefix
+bind-key -n  Btab next-window
+bind-key j command-prompt -p "join this pane to: "  "join-pane -h -t '%%'"
 
 # set config reload
 bind r source-file ~/.config/tmux/tmux.conf
 
 # set join-pane
-bind-key j command-prompt -p "join this pane to: "  "join-pane -h -t '%%'"
 # Set mouse 
 set  -g mouse on
 
