--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -17,7 +17,8 @@ unbind C-b
 set-option -g prefix M-o
 
 bind-key M-o send-prefix
-bind-key -n  Btab next-window
+bind-key -n  S-Left previous-window
+bind-key -n S-Right next-window
 bind-key j command-prompt -p "join this pane to: "  "join-pane -h -t '%%'"
 
 # set config reload
