--- a/.myzshrc
+++ b/.myzshrc
@@ -6,6 +6,22 @@ setopt PROMPT_SUBST
 
 ZLE_RPROMPT_INDENT=0
 
+export FZF_DEFAULT_OPTS=" \
+--color=bg+:#1e1f22,bg:#1e1f22,spinner:#f5e0dc,hl:#f38ba8 \
+--color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f9e2af \
+--color=marker:#f5e0dc,fg+:#f9e2af,prompt:#cba6f7,hl+:#f38ba8 \
+--with-nth 2.. \
+--info=inline --height=50% --layout=reverse --no-separator --no-scrollbar --border\
+"
+
+#export FZF_DEFAULT_OPTS=" \
+#--color=bg+:#1e1f22,bg:#1e1f22,spinner:#ffffff,hl:#ffffff \
+#--color=fg:#ffffff,header:#ffffff,info:#ffffff,pointer:#ffffff \
+#--color=marker:#ffffff,fg+:#ffffff,prompt:#ffffff,hl+:#ffffff \
+#--with-nth 2.. \
+#"
+
+
 
 if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
