--- a/.myzshrc
+++ b/.myzshrc
@@ -7,7 +7,7 @@ setopt PROMPT_SUBST
 ZLE_RPROMPT_INDENT=0
 
 export FZF_DEFAULT_OPTS=" \
---color=bg+:#1e1f22,bg:#1e1f22,spinner:#f5e0dc,hl:#f38ba8 \
+--color=bg+:#18191A,bg:#18191A,spinner:#f5e0dc,hl:#f38ba8 \
 --color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f9e2af \
 --color=marker:#f5e0dc,fg+:#f9e2af,prompt:#cba6f7,hl+:#f38ba8 \
 --with-nth 2.. \
