--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,8 +13,8 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # change prefix
-unbind C-b
-set-option -g prefix M-o
+# unbind C-b
+# set-option -g prefix M-o
 
 bind-key M-o send-prefix
 bind-key -n  S-Left previous-window
