--- a/.myzshrc
+++ b/.myzshrc
@@ -37,7 +37,7 @@ export FZF_DEFAULT_OPTS=" \
 --color=bg+:#18191A,bg:#18191A,spinner:#f5e0dc,hl:#f38ba8 \
 --color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f9e2af \
 --color=marker:#f5e0dc,fg+:#f9e2af,prompt:#cba6f7,hl+:#f38ba8 \
---height=100% --margin=1,2 --no-separator --no-scrollbar --border"
+--height=100% --margin=1,2 --no-info --no-separator --no-scrollbar --border"
 
 alias {vi, vim}="nvim"
 alias clear=clear_prompt
