--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -28,5 +28,7 @@ bind r source-file ~/.config/tmux/tmux.conf
 # Set mouse 
 set  -g mouse on
 
+set-hook -g after-exit 'run-shell "kill -USR1 $(pgrep -n zsh)"'
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
