--- a/.myzshrc
+++ b/.myzshrc
@@ -14,11 +14,12 @@ setopt appendhistory
 setopt INC_APPEND_HISTORY  
 setopt SHARE_HISTORY
 setopt hist_ignore_all_dups
-ZSH_AUTOSUGGEST_STRATEGY=(history)
+ZSH_AUTOSUGGEST_STRATEGY=(history completion)
 
 # Register the function as a Zsh widget and bind it to Ctrl+L
 bindkey -s ^f "tmux-sessionizer\n"
-# Powerlevel10k instant prompt
+source $(brew --prefix)/share/zsh-autosuggestions/zsh-autosuggestions.zsh
+
 ZLE_RPROMPT_INDENT=0
 
 # Alias and color settings
@@ -29,6 +30,6 @@ export FZF_DEFAULT_OPTS=" \
 --color=bg+:#18191A,bg:#18191A,spinner:#f5e0dc,hl:#f38ba8 \
 --color=fg:#cdd6f4,header:#f38ba8,info:#cba6f7,pointer:#f9e2af \
 --color=marker:#f5e0dc,fg+:#f9e2af,prompt:#cba6f7,hl+:#f38ba8 \
---height=100% --margin=1,2 --no-info --no-separator --no-scrollbar --border"
+--layout=reverse --margin=1,2 --no-info --no-separator --no-scrollbar --border"
 
 alias {vi, vim}="nvim"
