--- a/kitty/cappucin.conf
+++ b/kitty/cappucin.conf
@@ -12,7 +12,7 @@
 foreground              #cdd6f4
 background              #18191A
 selection_foreground    #1e1e2e
-selection_background    #f5e0dc
+selection_background    #f9e2af
 
 # Cursor colors
 cursor                  #f5e0dc
