--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,7 +1,7 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # Font settings
-font_size 16.0
+font_size 12.0
 font_features none
 font_family      family='Comic Code' postscript_name=ComicCode-Regular
 bold_font        auto
@@ -22,3 +22,5 @@ macos_option_as_alt yes
 
 # Theme
 include current-theme.conf
+map alt+left send_text all \x1b\x62
+map alt+right send_text all \x1b\x66
