--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -12,9 +12,9 @@ set-option -as terminal-overrides ',xterm*:RGB'
 set -g base-index 1
 setw -g pane-base-index 1
 
-# change prefix
-# unbind C-b
-# set-option -g prefix M-o
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
 
 bind-key M-o send-prefix
 bind-key -n  S-Left previous-window
