--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,7 +5,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @catppuccin_flavour 'mocha'
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set-option -g status-style bg=default
+set-window-option -g window-status-current-style fg=yellow
+
+
 set-option -as terminal-overrides ',xterm*:RGB'
 
 # Windows should start at 1
