--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,14 +1,12 @@
 set -s escape-time 0
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-#set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @catppuccin_flavour 'mocha'
 set -g default-terminal "tmux-256color"
 set-option -g status-style bg=default
-set-window-option -g window-status-current-style fg=yellow
-
+set-option -g window-status-current-style fg=yellow
+set -g allow-passthrough on
 
 set-option -as terminal-overrides ',xterm*:RGB'
 
