--- a/.myzshrc
+++ b/.myzshrc
@@ -20,8 +20,8 @@ ZSH_AUTOSUGGEST_STRATEGY=(history completion)
 ZLE_RPROMPT_INDENT=0
 
 # Alias and color settings
-alias tscc="tmux-sessionizer -CC"
-alias ts="tmux-sessionizer"
+alias tmcc="tmux-sessionizer -CC"
+alias tm="tmux-sessionizer"
 export PATH="${PATH}:$HOME/bin"
 export CLICOLOR=1
 export LSCOLORS=cxfxgxexbxegedabagacad
