--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -s escape-time 0
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g default-terminal "tmux-256color"
+set -g default-terminal 'screen-256color'
 set-option -g status-style bg=default
 set-option -g window-status-current-style fg=yellow
 set -g allow-passthrough on
