--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -8,6 +8,16 @@ set-option -g status-style bg=default
 set-option -g window-status-current-style fg=yellow
 set -g allow-passthrough on
 
+# Move session title to right side (show first, increase length for full name)
+set -g status-left ""
+set -g status-right-length 100
+set -g status-right "#[fg=cyan][#S]"
+
+# Add brackets to window tabs
+set -g window-status-format "[#I:#W]"
+set -g window-status-current-format "[#I:#W*]"
+set -g window-status-separator " "
+
 set-option -as terminal-overrides ',xterm*:RGB'
 
 # Windows should start at 1
